# AI-Camp-Capstone-2024

./: .breakpoints  .replit  app.py  model.py  package-lock.json  pyproject.toml  replit.nix  replit_zip_error_log.txt  requirements.txt
.cache/fontconfig/: 3830d5c3ddfd5cd38a049b759396e72e-x86_64.cache-8  4c599c202bc5c08e2d34565a40eac3b2-x86_64.cache-8  7ef2298fde41cc6eeb7af42e48b7d293-x86_64.cache-8  d589a48862398ed80a3d6066f4f56f4c-x86_64.cache-8
.cache/matplotlib/: fontlist-v390.json
.cache/nix/: binary-cache-v6.sqlite
.cache/pypoetry/artifacts/5a/d7/fe/0395efb28f8e374a9a863c8d7a2eb52a1d5619abd1ec5d79e23b6ef8bd/: regex-2024.5.15-cp310-cp310-manylinux_2_17_x86_64.manylinux2014_x86_64.whl
.cache/pypoetry/artifacts/83/4b/41/2d3e09a12e47b531da3caf8f422ccfa01d7b0047973f95bc82c746357d/: contourpy-1.2.1-cp310-cp310-manylinux_2_17_x86_64.manylinux2014_x86_64.whl
.cache/pypoetry/artifacts/ff/fe/40/8dba46c3fddd7d8b1fde5a708ad4bad5d7187ac96a4a1dc7f46c4aed9c/: kiwisolver-1.4.5-cp310-cp310-manylinux_2_12_x86_64.manylinux2010_x86_64.whl
.cache/replit/nix/: env.json
.upm/: store.json
css/: styles.css
model/: model.pkl  vectorizer.pkl
templates/: index.html  results.html
